# INKON_CRM

./: .env.example  .gitignore  CONTRACT.md  PRD-IMKON-CRM.md  RULES.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7d332ad357b9_add_performance_indexes.py  a1b2c3d4e5f6_add_performance_indexes.py  c592774b16d3_initial_migration.py
app/: main.py
app/api/v1/: audit_logs.py  auth.py  courses.py  documents.py  enrollments.py  finance.py  journals.py  mentors.py  students.py  telegram.py  users.py
app/core/: config.py  deps.py  rate_limiter.py  redis.py  security.py
app/db/: base.py  session.py
app/models/: audit_log.py  course.py  course_mentor_history.py  course_schedule.py  document.py  enrollment.py  journal.py  journal_entry.py  journal_student_summary.py  notification_log.py  payment.py  refresh_token.py  user.py
app/repositories/interfaces/: audit_log_repository.py  base_repository.py  course_repository.py  document_repository.py  enrollment_repository.py  journal_repository.py  (+4 more)
app/schemas/: audit_log.py  auth.py  common.py  course.py  debt.py  document.py  enrollment.py  journal.py  payment.py  user.py
app/services/: audit_service.py  auth_service.py  course_service.py  document_service.py  email_service.py  enrollment_service.py  finance_service.py  journal_generation_service.py  journal_service.py  notification_service.py  storage_service.py  sum_calculation_service.py  user_service.py
app/telegram_bot/: bot.py
app/tests/: conftest.py
app/workers/: settings.py  tasks.py
scripts/: seed_admin.py
(+23 files in other folders)
